--- a/TeachersStudensQAForum_frontend/teachers-student-forum/src/pages/landingpage/src/landingpage.css
+++ b/TeachersStudensQAForum_frontend/teachers-student-forum/src/pages/landingpage/src/landingpage.css
@@ -7,7 +7,7 @@
 }
 
 .coverImage {
-    background-image: url("../assets/turfBackground.jpg");
+    /* background-image: url("../assets/turfBackground.jpg"); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
